feat: add account module and transfer the registration and identifier available routes
