# sample/typeorm-app/openapi/api-docs.json
@@ -306,128 +306,6 @@
                 ]
             }
         },
-        "/auth/registration": {
-            "post": {
-                "operationId": "AuthController_registration",
-                "parameters": [
-                    {
-                        "name": "X-RECAPTCHA-TOKEN",
-                        "in": "header",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "recaptcha_token",
-                        "required": false,
-                        "in": "query",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/RegisterUserDto"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ErrorResponse"
-                                }
-                            }
-                        }
-                    }
-                },
-                "tags": [
-                    "Auth"
-                ]
-            }
-        },
-        "/auth/identifier/available": {
-            "get": {
-                "operationId": "AuthController_identifierAvailable",
-                "parameters": [
-                    {
-                        "name": "field",
-                        "required": true,
-                        "in": "query",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "value",
-                        "required": true,
-                        "in": "query",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "X-RECAPTCHA-TOKEN",
-                        "in": "header",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "recaptcha_token",
-                        "required": false,
-                        "in": "query",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/StatusResponse"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ErrorResponse"
-                                }
-                            }
-                        }
-                    }
-                },
-                "tags": [
-                    "Auth"
-                ]
-            }
-        },
         "/auth/refresh": {
             "post": {
                 "operationId": "AuthController_refresh",
@@ -1616,6 +1494,128 @@
                             "*"
                         ]
                     }
+                ]
+            }
+        },
+        "/account/registration": {
+            "post": {
+                "operationId": "AccountController_registration",
+                "parameters": [
+                    {
+                        "name": "X-RECAPTCHA-TOKEN",
+                        "in": "header",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "recaptcha_token",
+                        "required": false,
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/RegisterUserDto"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Account"
+                ]
+            }
+        },
+        "/account/identifier/available": {
+            "get": {
+                "operationId": "AccountController_identifierAvailable",
+                "parameters": [
+                    {
+                        "name": "field",
+                        "required": true,
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "value",
+                        "required": true,
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "X-RECAPTCHA-TOKEN",
+                        "in": "header",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "recaptcha_token",
+                        "required": false,
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/StatusResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Account"
                 ]
             }
         },
@@ -5632,60 +5632,18 @@
                     "code"
                 ]
             },
-            "FileDto": {
+            "StatusResponse": {
                 "type": "object",
                 "properties": {
-                    "data": {
-                        "type": "string"
-                    },
-                    "originalName": {
-                        "type": "string"
-                    },
-                    "title": {
-                        "type": "string",
-                        "maxLength": 255
-                    },
-                    "description": {
-                        "type": "string",
-                        "maxLength": 4096
-                    }
-                },
-                "required": [
-                    "data"
-                ]
-            },
-            "RegisterUserDto": {
-                "type": "object",
-                "properties": {
-                    "consent": {
+                    "success": {
                         "type": "boolean"
                     },
-                    "firstName": {
-                        "type": "string",
-                        "maxLength": 255
-                    },
-                    "lastName": {
-                        "type": "string",
-                        "maxLength": 255
-                    },
-                    "email": {
-                        "type": "string",
-                        "maxLength": 255
-                    },
-                    "password": {
-                        "type": "string",
-                        "minLength": 6
-                    },
-                    "avatar": {
-                        "$ref": "#/components/schemas/FileDto"
+                    "message": {
+                        "type": "string"
                     }
                 },
                 "required": [
-                    "consent",
-                    "firstName",
-                    "lastName",
-                    "email",
-                    "password"
+                    "success"
                 ]
             },
             "FileMeta": {
@@ -6022,20 +5980,6 @@
                     "planId",
                     "owner",
                     "plan"
-                ]
-            },
-            "StatusResponse": {
-                "type": "object",
-                "properties": {
-                    "success": {
-                        "type": "boolean"
-                    },
-                    "message": {
-                        "type": "string"
-                    }
-                },
-                "required": [
-                    "success"
                 ]
             },
             "GoogleAuth": {
@@ -6526,6 +6470,28 @@
                     }
                 }
             },
+            "FileDto": {
+                "type": "object",
+                "properties": {
+                    "data": {
+                        "type": "string"
+                    },
+                    "originalName": {
+                        "type": "string"
+                    },
+                    "title": {
+                        "type": "string",
+                        "maxLength": 255
+                    },
+                    "description": {
+                        "type": "string",
+                        "maxLength": 4096
+                    }
+                },
+                "required": [
+                    "data"
+                ]
+            },
             "CreateUserDto": {
                 "type": "object",
                 "properties": {
@@ -6644,6 +6610,40 @@
                         "type": "string"
                     }
                 }
+            },
+            "RegisterUserDto": {
+                "type": "object",
+                "properties": {
+                    "consent": {
+                        "type": "boolean"
+                    },
+                    "firstName": {
+                        "type": "string",
+                        "maxLength": 255
+                    },
+                    "lastName": {
+                        "type": "string",
+                        "maxLength": 255
+                    },
+                    "email": {
+                        "type": "string",
+                        "maxLength": 255
+                    },
+                    "password": {
+                        "type": "string",
+                        "minLength": 6
+                    },
+                    "avatar": {
+                        "$ref": "#/components/schemas/FileDto"
+                    }
+                },
+                "required": [
+                    "consent",
+                    "firstName",
+                    "lastName",
+                    "email",
+                    "password"
+                ]
             },
             "InfoDto": {
                 "type": "object",
